[package]
name = "cyclonedds-sys"
version = "0.1.0"
authors = ["Sojan James <Sojan.James@gmail.com>"]
edition = "2018"
links = "ddsc"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.51.0"
glob = "0.3"

[dependencies]
